# diodon

./: README.md  meson_options.txt
data/: net.launchpad.Diodon.gschema.xml
libdiodon/: clipboard-menu.vala  controller.vala  image-clipboard-item.vala  preferences-view.vala  text-clipboard-item.vala
plugins/: meson.build
plugins/statusicon/: meson.build  statusicon-plugin.vala  statusicon.plugin.in
